--- a/dada/templates/social_bookmarking_badges_widget.tmpl
+++ b/dada/templates/social_bookmarking_badges_widget.tmpl
@@ -18,9 +18,13 @@
 			<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-reddit.png" title="Share on Reddit" width="48" height="48">	
 		</a>
 	</li>
+
+	<li>
+		<a href="//pinboard.in/popup_login" onclick="window.location = '//pinboard.in/popup_login?url=' + encodeURIComponent(window.location); return false"> 
+			<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-pinboard.png" title="Share on Reddit" width="48" height="48">	
+		</a>
+	</li>
 </ul>
-
-
 <!-- (Icons are CC-Attrib; attrib to http://fairheadcreative.com; thanks!) -->
 
 <!-- end social_bookmarking_badges_widget.tmpl -->
