--- a/dada/templates/list_unsubscribe.tmpl
+++ b/dada/templates/list_unsubscribe.tmpl
@@ -55,7 +55,7 @@
 					<div class="row">
 						<div class="small-12 columns">				
 							<label for="email">
-								Please enter your email address that is currently Subscribed, below:
+								Please enter your email address that is currently subscribed below:
 							</label> 
 						</div>
 					</div> 
