--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -98,7 +98,10 @@
 	</div>
 	
 	<div class="row">
-		<div class="small-12 columns">
+		<div class="small-1 columns">
+			&nbsp;
+		</div>
+		<div class="small-11 columns">
 			<a href="#" class="toggleDivs" data-target="additional_email_headers">
 				+/- Additional Headers
 			</a>
