Hey! I don't want, that!

--- a/dada/templates/view_list_screen.tmpl
+++ b/dada/templates/view_list_screen.tmpl
@@ -40,7 +40,7 @@
 
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
-<div class="row" style="border: 1px solid black">
+<div class="row">
     <div class="small-12 columns">
         <div id="view_list_viewport" style="width:100%"></div> 
     </div> 
