deprecating S_PROGRAM_URL

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1877,6 +1877,7 @@
 		<!-- /tmpl_if --> 
 
 
+<!-- tmpl_if comment -->
 		<!-- tmpl_if show_s_program_url_options --> 
 			
 			<label for="configure_s_program_url">
@@ -1893,7 +1894,7 @@
 				</div>
 			</div> 
 		<!-- /tmpl_if --> 
-
+<!-- /tmpl_if --> 
 
 		<!-- tmpl_if show_amazon_ses_options --> 
 
