--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -14,9 +14,8 @@ $DIR = '<!-- tmpl_var dada_files_dir -->';
 # The URL to access Dada Mail:
 #
 $PROGRAM_URL   = '<!-- tmpl_var PROGRAM_URL -->';
-<!-- tmpl_if configure_s_program_url --> 
-$S_PROGRAM_URL = '<!-- tmpl_var s_program_url_S_PROGRAM_URL -->';
-<!-- /tmpl_if -->
+$S_PROGRAM_URL = '<!-- tmpl_var PROGRAM_URL -->';
+
 $RUNNING_UNDER = '<!-- tmpl_var deployment_RUNNING_UNDER default="CGI" -->';
 
 #---------------------------------------------------------------------#
