--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -43,31 +43,31 @@
 
 
 <form name="mass_mailing" id="mass_mailing" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
-	 <div id="buttons" class="contain-to-grid">
-	 	<div class="button_toolbar">
-	 		<input type="button" value="Loading..." class="button small" >
-	 	</div>
-	 </div>
+	<input type="hidden" id="list"               name="list"                  value="<!-- tmpl_var list_settings.list -->" >
+	<input type="hidden" id="sched_flavor"       name="sched_flavor"          value="<!-- tmpl_var sched_flavor -->" >
+
+	<input type="hidden" name="s_program_url"      id="s_program_url"    value="<!-- tmpl_var S_PROGRAM_URL -->" >
+	<input type="hidden" name="flavor"            id="flavor"            value="send_url_email" >
+	<input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" >
+
+	<input type="hidden" id="draft_alert"        name="draft_alert"           value="<!-- tmpl_var draft_alert default="0" -->" >
+	<input type="hidden" id="draft_id"           name="draft_id"              value="<!-- tmpl_var draft_id -->"                > 
+	<input type="hidden" id="save_draft_role"    name="save_draft_role"       value=""                                          >
+	<input type="hidden" id="draft_role"         name="draft_role"            value="<!-- tmpl_var draft_role -->"              >
+	<input type="hidden" id="restore_from_draft" name="restore_from_draft"    value="<!-- tmpl_var restore_from_draft -->"      >
+	
+	
+	<div class="hide-for-small-only">
+		<div id="buttons" class="contain-to-grid">
+			<div class="button_toolbar">
+				<input type="button" value="Loading..." class="button small" >
+			</div>
+		</div>
+	</div>
+	
 	<div id="entire_form">
 		<div id="form_widgets"> 
-			<!-- tmpl_include test_sent_notice_widget.tmpl --> 
-			<!-- tmpl_include ses_email_verification_widget.tmpl -->
-			<!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
-			<!-- tmpl_include discussion_list_support_notice_widget.tmpl --> 
-
-			<!-- tmpl_if draft_id --> 
-				<!-- tmpl_if expr="(draft_role eq 'draft')" --> 
-					<div class="alert-box info radius">
-						Draft message restored below:
-					</div> 
-				<!-- /tmpl_if -->
-				<!-- tmpl_if expr="(draft_role eq 'stationery')" --> 
-					<!-- tmpl_if done --> 
-						<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
-					<!-- /tmpl_if -->
-				<!-- /tmpl_if -->     
-			<!-- /tmpl_if -->
-
+			
 			<!-- tmpl_unless can_use_mime_lite_html -->
 				<div class="alert-box alert radius">
 					<p>
@@ -88,178 +88,118 @@
 						</code> 
 					</div> 
 				<!-- tmpl_else-->
+				
 
-					<!-- tmpl_include send_email_draft_notice_widget.tmpl --> 
-					<!-- tmpl_include send_email_schedule_options_widget.tmpl -->
-					<!-- tmpl_include send_email_headers_widget.tmpl --> 
-
-					<input type="hidden" id="list"               name="list"                  value="<!-- tmpl_var list_settings.list -->" >
-					<input type="hidden" id="sched_flavor"       name="sched_flavor"          value="<!-- tmpl_var sched_flavor -->" >
-
-					<input type="hidden" name="s_program_url"      id="s_program_url"    value="<!-- tmpl_var S_PROGRAM_URL -->" >
-					<input type="hidden" name="flavor"            id="flavor"            value="send_url_email" >
-					<input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" >
-
-					<input type="hidden" id="draft_alert"        name="draft_alert"           value="<!-- tmpl_var draft_alert default="0" -->" >
-					<input type="hidden" id="draft_id"           name="draft_id"              value="<!-- tmpl_var draft_id -->"                > 
-					<input type="hidden" id="save_draft_role"    name="save_draft_role"       value=""                                          >
-					<input type="hidden" id="draft_role"         name="draft_role"            value="<!-- tmpl_var draft_role -->"              >
-					<input type="hidden" id="restore_from_draft" name="restore_from_draft"    value="<!-- tmpl_var restore_from_draft -->"      >
-
-
-					<fieldset> 
-						 <legend>
-		 					Message Body [<a href="#" data-reveal-id="send_email_message_body_help">?</a>]
-						</legend>
-
-						<ul class="tabs" data-tab>
-							<li class="tab-title <!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" --><!-- tmpl_else -->active<!-- /tmpl_if -->">
-								<a href="#html_message">
-									HTML Version
-								</a>
-							</li>
-							<li class="tab-title <!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" --> active <!-- /tmpl_if -->">
-								<a href="#plaintext_message">
-									PlainText Version
-								</a>
-							</li>		
-						</ul>	
-						<div class="tabs-content">
-							<div  class="content tab-title  <!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" --><!-- tmpl_else -->active<!-- /tmpl_if -->" id="html_message"> 
-							<div class="row">
-								<div class="small-12 columns">
-									<input type="radio" name="content_from" id="content_from_url" value="url" checked="checked" >
-									<label for="content_from_url">
-										Grab content from a URL:
-									</label>
-								</div>
-							</div>
-							<div class="row">
-								<div class="small-12 columns">
-									<input type="url" name="url" id="url"  placeholder="http://" >
-								</div>
-							</div>
-							<div class="row">
-								<div class="small-12 columns">
-									<input type="radio" name="content_from" id="content_from_textarea" value="content_from_textarea" >
-									<label for="content_from_textarea">
-										Write/Paste Text:
-									</label>
-								</div>
-							</div>
-							<div class="row">
-								<div class="small-12 columns">
-									<!-- tmpl_include html_message_form_field_widget.tmpl --> 
-								</div>
-							</div>
-	
-						<fieldset>
-							<legend>
-								Advanced Options
-							</legend>
-	
-							<div class="row">
-								<div class="small-12 columns">
-									<!-- tmpl_unless can_use_HTML_Tree --> 
-										<div class="alert-box alert radius">
-											Disabled. The following CPAN Perl module will need to be installed: HTML::Tree. 
-										</div>
-									<!-- /tmpl_unless --> 
-									<input 
-										type="checkbox" 
-										name="crop_html_content" 
-										id="crop_html_content" value="1"
-									>
-									<label for="crop_html_content">
-										Crop webpage, sending only content found in the tag with: 
-									</label>
-								</div>
-							</div>
-							<div class="row collapse">
-								<div class="small-1 large-1 columns">&nbsp;
-								</div>
-								<div class="small-4 large-2 columns">
-									<select 
-										name="crop_html_content_selector_type" 
-										id="crop_html_content_selector_type"
-									> 
-										<option value="id">id:</option>
-										<option value="class">class:</option>
-									</select> 
-								</div>
-								<div class="small-6 large-4 columns">
-									<input 
-										type="text" 
-										name="crop_html_content_selector_label" 
-										id="crop_html_content_selector_label"
-									>
-								</div> 
-								<div class="small-1 large-1 columns">
-								</div>
-							</div>
-
-
-							<div class="row">
-								<div class="small-12 columns">
-								<input type="radio" name="url_options" id="extern" value="extern" checked="checked" >
-								<label for="extern">
-									Change Image URLs to Absolute
-								</label> 
-								</div> 
-							</div>
-							<div class="row">
-								<div class="small-12 columns">
-									<input type="radio" name="url_options" value="cid" id="cid" >
-									<label for="cid">
-										Embed Images in Message
-									</label>
-								</div> 
-							</div> 	 
-
-							<div class="row">
-								<div class="small-12 columns">			 
-									<input 
-										type="checkbox" 
-										name="remove_javascript" 
-										id="remove_javascript" 
-										checked="checked" value="1"
-									> 
-									<label for="remove_javascript">
-										Remove Javascript
-									</label>
-									</div> 
-								</div>
-							</fieldset>
-						</div> 
-						<div class="content <!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" --> active <!-- /tmpl_if -->" id="plaintext_message"> 		 
-							<div class="row">
-								<div class="small-12 columns">
-									<input type="radio" name="plaintext_content_from" id="plaintext_content_from_auto" value="auto" checked="checked" >
-									<label for="plaintext_content_from_auto">
-										Create a PlainText version automatically
-									</label>
-								</div>
-							</div>
-							<div class="row">
-								<div class="small-12 columns">
-									<input type="radio" name="plaintext_content_from" id="plaintext_content_from_url" value="url" >
-									<label for="plaintext_content_from_url">
-										Grab content from a URL: 
-									</label>
-									<input type="text" name="plaintext_url" id="plaintext_url"  placeholder="http://" >
-								</div>
-							</div>
-							<div class="row">
-								<div class="small-12 columns">
-									<input type="radio" name="plaintext_content_from" id="plaintext_content_from_text" value="text" >
-									<label for="plaintext_content_from_text">
-										Write/Paste Text:
-									</label>
-									<!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
-								</div>
-							</div>
+			<!-- tmpl_if draft_id --> 
+				<!-- tmpl_if expr="(draft_role eq 'draft')" --> 
+					<!-- 
+						<div class="alert-box info radius">
+							Draft message restored below:
 						</div>
-						<!-- tmpl_include send_email_options_widget.tmpl -->
+					-->  
+				<!-- /tmpl_if -->
+				<!-- tmpl_if expr="(draft_role eq 'stationery')" --> 
+					<!-- tmpl_if done --> 
+						<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
+					<!-- /tmpl_if -->
+				<!-- /tmpl_if -->     
+				<!-- tmpl_if expr="(draft_role eq 'schedule')" --> 
+					<!-- tmpl_if done --> 
+						<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
+				<!-- /tmpl_if -->
+			<!-- /tmpl_if -->     
+
+			<!-- /tmpl_If --> 
+
+			<!-- tmpl_include test_sent_notice_widget.tmpl --> 
+			<!-- tmpl_include ses_email_verification_widget.tmpl -->
+			<!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
+			<!-- tmpl_include discussion_list_support_notice_widget.tmpl --> 
+
+			<!-- tmpl_unless list_settings.smtp_server -->	
+				<!-- tmpl_if expr="list_settings.sending_method eq 'smtp'"  -->
+					<div class="alert-box info radius">
+						Warning! No SMTP Server has been set!
+					</div> 
+				<!-- /tmpl_if -->
+			<!-- /tmpl_unless -->
+
+
+			<!-- tmpl_include send_email_schedule_options_widget.tmpl -->
+
+			<!-- tmpl_include send_email_headers_widget.tmpl --> 
+			
+			    <ul class="tabs show-for-medium-up" data-tab>
+			      <li 
+				  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
+						class="tab-title"
+					<!-- tmpl_else -->
+						class="tab-title active"
+					<!-- /tmpl_if -->
+					>
+					  	<a href="#html_message">
+							HTML Version
+						</a>
+				  </li>
+			      <li
+				  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
+						class="tab-title active"
+					<!-- tmpl_else -->
+						class="tab-title"
+					<!-- /tmpl_if -->
+					>
+				 		<a href="#plaintext_message">
+					  	  PlainText Version
+					  	</a>
+				  </li>
+			      <li class="tab-title">
+					  <a href="#options">
+						Options
+					  </a>
+				 	</li>
+			    </ul>
+			<dl class="accordion" data-accordion>
+				<dd class="accordion-navigation">
+					<a href="#html_message" class="show-for-small-only">
+						HTML Version
+					</a>
+					<div id="html_message" 
+				  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
+						class="content"
+					<!-- tmpl_else -->
+						class="content active"
+					<!-- /tmpl_if -->
+					>
+						<div class="content-box section-box">
+							<!-- tmpl_include send_url_email_html_message_form_field_widget.tmpl --> 
+		    			</div>
+					</div>
+					<a href="#plaintext_message" class="show-for-small-only">
+						PlainText Version
+					</a>
+					<div id="plaintext_message" 
+					  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
+							class="content active"
+						<!-- tmpl_else -->
+							class="content"
+						<!-- /tmpl_if -->
+					>
+						<div class="content-box section-box">
+		    				<!-- tmpl_include send_url_email_plaintext_message_form_field_widget.tmpl -->
+		    			</div>
+					</div>
+					<a href="#options" class="show-for-small-only">
+						Options
+					</a>
+					<div id="options" class="content">
+						<div class="content-box section-box">
+							<!-- tmpl_include send_email_options_widget.tmpl -->
+		    				
+		       		   </div>
+					</div>
+				</dd>
+			</dl>
+					
 					<!-- /tmpl_unless --> 
 				<!-- /tmpl_unless --> 	
 			<!-- ?!?!!!? -->			
