--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -620,7 +620,7 @@ $ADMIN_MENU = [
 	},
 
 
-	{-Title      => 'Design',
+	{-Title      => 'Appearance',
 	 -Activated  => 1,
 	 -Submenu    => [
 					{
