--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -72,7 +72,7 @@
  </p>
  
  <p>
-     <label for="cronjob_url">Here's an example of a cronjob, using the curl command:</label> <br /> 
+     <label for="cronjob_url">Using the curl command:</label> <br /> 
      <input type="text"  id="cronjob_url" value="<!-- tmpl_var name="curl_location" default="/cannot/find/curl" --> --user-agent &quot;Mozilla/5.0 (compatible;)&quot; --silent --get --url <!-- tmpl_var S_PROGRAM_URL -->/<!-- tmpl_var scheduled_jobs_flavor escape="HTML" -->/_all/_all/_silent/" />
  </p>
  </fieldset> 
