--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -210,7 +210,7 @@
 
 	<div class="row">
 	   <div class="small-12 columns" id="footer">
-			<p><!-- tmpl_var footer_props default="Dada Mail Copyright 1999-2015 Simoni Creative" --></p>   
+			<p><!-- tmpl_var footer_props --></p>   
 		</div>
 	</div>
 
