--- a/dada/templates/scheduled_jobs.tmpl
+++ b/dada/templates/scheduled_jobs.tmpl
@@ -44,7 +44,7 @@
     <div class="row">
 		<div class="small-12 columns">
 	        <label for="cronjob_url">
-				Here's an example of a cronjob, using the curl command: 
+				Using the curl command: 
 			</label> 
 		
 		
