--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -251,7 +251,9 @@
 				             <input type="hidden" name="flavor" value="profile_fields" > 
 				             <input type="hidden" name="process" value="delete_field" > 
 				             <input type="hidden" name="field"  value="<!-- tmpl_var field -->" > 
-				            <button type="submit" class="button small alert"  onclick="return removeSubscriberField(this.form);" ><i class="fi-x"></li></button>
+				            <button type="submit" class="button small alert"  onclick="return removeSubscriberField(this.form);" >
+									<i class="fi-x"></i>
+								</button>
 				            </form> 
 						</li>
 					</ul>
