--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin html_code_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Appearance and Templates &#187; Subscription Form HTML" -->
+<!-- tmpl_set name="title" value="Appearance &#187; Subscription Form HTML" -->
 
 <div id="screen_meta" data-menu_highlight="html_code"></div>
 <div id="html_code"></div>
@@ -10,7 +10,7 @@
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Appearance and Templates
+				Appearance
 			 </a>
 	 	    <a 
 				href="#"
