--- a/dada/templates/back_link_screen.tmpl
+++ b/dada/templates/back_link_screen.tmpl
@@ -1,13 +1,13 @@
 <!-- begin back_link_screen.tmpl -->
 
 <div id="screen_meta" data-menu_highlight="back_link"></div>
-<!-- tmpl_set name="title" value="Appearance and Templates &#187; Create a Back Link" -->
+<!-- tmpl_set name="title" value="Appearance &#187; Create a Back Link" -->
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Appearance and Templates
+				Appearance
 			 </a>
 	 	    <a 
 				href="#"
