--- a/dada/templates/edit_html_type_screen.tmpl
+++ b/dada/templates/edit_html_type_screen.tmpl
@@ -1,13 +1,13 @@
 <!-- begin edit_html_type_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Appearance and Templates &#187; HTML Screen Templates" -->
+<!-- tmpl_set name="title" value="Appearance &#187; HTML Screen Templates" -->
 <div id="screen_meta" data-menu_highlight="edit_html_type"></div>
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Appearance and Templates
+				Appearance
 			 </a>
 	 	    <a 
 				href="#"
