--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -1,14 +1,14 @@
 <!-- begin edit_type_screen.tmpl -->
 
 
-<!-- tmpl_set name="title" value="Appearance and Templates &#187; Email Message Templates" -->
+<!-- tmpl_set name="title" value="Appearance &#187; Email Message Templates" -->
 <div id="screen_meta" data-menu_highlight="edit_type"></div>
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 large-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Appearance and Templates
+				Appearance
 			 </a>
 	 	    <a 
 				href="#"
