Plugins is now Plugins/Extensions

--- a/dada/templates/plugins/bounce_handler/bounce_score_search.tmpl
+++ b/dada/templates/plugins/bounce_handler/bounce_score_search.tmpl
@@ -1,4 +1,4 @@
-	<!-- tmpl_set name="title" value="Plugins &#187; Bounce Handler &#187; Bounce Log Search Results" --> 
+	<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Bounce Handler &#187; Bounce Log Search Results" --> 
 	
 <!-- tmpl_if chrome --> 
 
