--- a/dada/templates/plugins/bridge/test_pop3.tmpl
+++ b/dada/templates/plugins/bridge/test_pop3.tmpl
@@ -1,7 +1,7 @@
 <!-- tmpl_if chrome --> 
 
 	<div id="screen_meta" data-menu_highlight="bridge"></div>
-	<!-- tmpl_set name="title" value="Plugins &#187; Bridge &#187; POP3 Login Test" --> 
+	<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Bridge &#187; POP3 Login Test" --> 
 	<div id="screentitle"> 
 		<div id="screentitlepadding">
 			<!-- tmpl_var title --> 
@@ -11,7 +11,7 @@
 
   <p id="breadcrumbs">
         <a href="<!-- tmpl_var Plugin_URL -->">
-		 Plugins &#187; Bridge &#187; POP3 Login Test
+		 Plugins/Extensions &#187; Bridge &#187; POP3 Login Test
 	</a> &#187; Test POP3 Login
    </p>
 <!-- /tmpl_if --> 
