--- a/dada/templates/plugins/change_list_shortname/default.tmpl
+++ b/dada/templates/plugins/change_list_shortname/default.tmpl
@@ -1,4 +1,4 @@
-<!-- tmpl_set name="title" value="Plugins &#187; Change List Shortname" -->
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Change List Shortname" -->
 
 <div id="screen_meta" data-menu_highlight="change_list_shortname"></div>
 
