--- a/dada/templates/plugins/change_root_password/default.tmpl
+++ b/dada/templates/plugins/change_root_password/default.tmpl
@@ -1,4 +1,4 @@
-<!-- tmpl_set name="title" value="Plugins &#187; Change Your <!-- tmpl_var PROGRAM_NAME --> Root Password" -->
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Change Your <!-- tmpl_var PROGRAM_NAME --> Root Password" -->
 <div class="row">
 	<div class="medium-10 large-9 columns">
 	   	<nav class="breadcrumbs">	
