--- a/dada/templates/plugins/log_viewer/default.tmpl
+++ b/dada/templates/plugins/log_viewer/default.tmpl
@@ -1,4 +1,4 @@
-<!-- tmpl_set name="title" value="Plugins &#187; Log Viewer" -->
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Log Viewer" -->
 <div class="row">
 	<div class="medium-10 large-9 columns">
 	   	<nav class="breadcrumbs">	
