--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -1,4 +1,4 @@
-<!-- tmpl_set name="title" value="Plugins &#187; Password Protect Directories" --> 
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Password Protect Directories" --> 
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
