--- a/dada/templates/plugins/screen_cache/view.tmpl
+++ b/dada/templates/plugins/screen_cache/view.tmpl
@@ -1,7 +1,7 @@
 <!-- begin view.tmpl --> 
 
 
-<!-- tmpl_set name="title" value="Plugins &#187; Screen Cache" -->
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Screen Cache" -->
 <div id="screen_meta" data-menu_highlight="screen_cache"></div>
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
