--- a/dada/templates/plugins/shared/sql_backend_only_message.tmpl
+++ b/dada/templates/plugins/shared/sql_backend_only_message.tmpl
@@ -1,4 +1,4 @@
-<!-- tmpl_set name="title" value="Plugins &#187; Password Protect Directories" --> 
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Password Protect Directories" --> 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
