--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -1,6 +1,6 @@
 <!-- begin plugins/tracker/default.tmpl -->
 
-<!-- tmpl_set name="title" value="Plugins &#187; Tracker" --> 
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Tracker" --> 
 <!-- tmpl_set name="load_google_viz" value="1" -->
 
 
