--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -6,7 +6,7 @@
 
 <!-- tmpl_if chrome --> 
 
-	<!-- tmpl_set name="title" value="Plugins &#187; Tracker &#187; Message Report" --> 
+	<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Tracker &#187; Message Report" --> 
 	
 	<!-- tmpl_set name="load_google_viz" value="1" -->
 	
