--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -1,5 +1,5 @@
 
-<!-- tmpl_set name="title" value="Plugins &#187; Bounce Handler" -->	
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Bounce Handler" -->	
 <div id="screen_meta" data-menu_highlight="bounce_handler"></div>
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
