--- a/dada/templates/plugins/bounce_handler/parse_bounce.tmpl
+++ b/dada/templates/plugins/bounce_handler/parse_bounce.tmpl
@@ -1,7 +1,7 @@
-<!-- tmpl_set name="title" value="Plugins &#187; Bounce Handler &#187; Parsing Bounces..." --> 
+<!-- tmpl_set name="title" value="Plugins/Extensions &#187; Bounce Handler &#187; Parsing Bounces..." --> 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		Plugins &#187; Bounce Handler &#187; Parsing Bounces...
+		Plugins/Extensions &#187; Bounce Handler &#187; Parsing Bounces...
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
