menu label changes

--- a/dada/templates/feature_set_screen.tmpl
+++ b/dada/templates/feature_set_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin feature_set_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Your List Control Panel &#187; Customize Feature Set" -->
+<!-- tmpl_set name="title" value="Your List Control Panel &#187; Enable/Disable Features" -->
 <div id="screen_meta" data-menu_highlight="feature_set"></div>
 
 
@@ -15,7 +15,7 @@
 				href="#"
 				class="current"
 			>	
-				Customize Feature Set
+				Enable/Disable Features
 			</a>
 		</nav>
 	</div>
