--- a/dada/templates/manage_script_screen.tmpl
+++ b/dada/templates/manage_script_screen.tmpl
@@ -1,11 +1,11 @@
 <!-- begin manage_script_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="App Information &#187; About <!-- tmpl_var PROGRAM_NAME -->" -->
+<!-- tmpl_set name="title" value="Control Panel Settings&#187; About <!-- tmpl_var PROGRAM_NAME -->" -->
 <div id="screen_meta" data-menu_highlight="manage_script"></div>
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		App Information &#187; About <!-- tmpl_var PROGRAM_NAME -->
+		Control Panel Settings&#187; About <!-- tmpl_var PROGRAM_NAME -->
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
