--- a/dada/templates/setup_info_screen.tmpl
+++ b/dada/templates/setup_info_screen.tmpl
@@ -1,18 +1,18 @@
 <!-- begin setup_info_screen.tmpl -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-<!-- tmpl_set name="title" value="App Information &#187; Configuration" -->
+<!-- tmpl_set name="title" value="Control Panel Settings&#187; App Configuration" -->
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				App Information
+				Control Panel Settings
 			 </a>
 	 	    <a 
 				href="#"
 				class="current"
 			>	
-				Configuration
+				App Configuration
 			</a>
 		</nav>
 	</div>
