--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -57,13 +57,16 @@
 	<input type="hidden" id="restore_from_draft" name="restore_from_draft"    value="<!-- tmpl_var restore_from_draft -->"      >
 	
 	
-	<div class="hide-for-small-only">
-		<div id="buttons" class="contain-to-grid">
-			<div class="button_toolbar">
-				<input type="button" value="Loading..." class="button small" >
+	 <div class="contain-to-grid sticky hide-for-small-only" style="text-align:center">
+	   <nav data-topbar role="navigation" data-options="sticky_on: large">
+			<div id="buttons" style="background-color:#fff;">
+				<div class="button_toolbar">
+					<input type="button" value="Loading..." class="button small" >
+				</div>
 			</div>
-		</div>
-	</div>
+		</nav>
+	 </div>
+
 	
 	<div id="entire_form">
 		<div id="form_widgets"> 
