--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -63,7 +63,7 @@
 
 <div class="row">
    <div class="small-12 columns" id="footer">
-		<p><!-- tmpl_var footer_props --></p>   
+		<p><small><!-- tmpl_var footer_props --></small></p>   
 	</div>
 </div>
 
