stay right there, buddy

--- a/dada/templates/help_link_widget.tmpl
+++ b/dada/templates/help_link_widget.tmpl
@@ -1,9 +1,9 @@
 <!-- begin help_link_widget.tmpl --> 
 
 <!-- tmpl_if SHOW_HELP_LINKS --> 
-			<a href="<!-- tmpl_var HELP_LINKS_URL -->/<!-- tmpl_var screen -->.html" class="tiny button">
-				Help
-			</a>
+	<a href="<!-- tmpl_var HELP_LINKS_URL -->/<!-- tmpl_var screen -->.html" class="tiny button" target="_blank">
+		Help
+	</a>
 <!-- /tmpl_if --> 
 
 <!-- end help_link_widget.tmpl --> 
